--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
     "react-redux": "^6.0.1",
