--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "marked": "^0.6.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-datepicker": "^2.3.0",
