--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.11",
     "marked": "^0.6.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
