--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux-thunk": "^2.3.0",
     "save": "^2.3.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
