--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "marked": "^0.6.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-big-calendar": "^0.20.4",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
