--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-big-calendar": "^0.20.4",
+    "react-color": "^2.17.0",
     "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
